fix: wrong padding

--- a/src/styles/pages/Home.module.scss
+++ b/src/styles/pages/Home.module.scss
@@ -7,7 +7,6 @@
 
     .__introduction {
         max-width: 40%;
-        padding: 2%;
         font-size: 1.2rem;
         font-weight: lighter;
         line-height: 1.5rem;
